Remove text decoration from links in the footer.

--- a/include/style/screen.css
+++ b/include/style/screen.css
@@ -111,6 +111,10 @@ HEADER {
     overflow: hidden;
 }
 
+FOOTER A {
+	text-decoration: none;
+}
+
 H1 {
     font-size: 1.50em;
 }
@@ -187,10 +191,6 @@ P {
 .columns.three SECTION,
 .columns.two SECTION {
 	float: left;
-}
-
-A < I {
-	text-decoration: none;
 }
 
 @media ( min-width: 1024px ) {
