--- a/include/style/screen.css
+++ b/include/style/screen.css
@@ -13,6 +13,7 @@ A,
 ABBR,
 ACRONYM,
 ADDRESS,
+ARTICLE,
 BLOCKQUOTE,
 CAPTION,
 CITE,
@@ -71,6 +72,10 @@ BODY {
 	color: #4d4d4d;
 }
 
+ARTICLE + ARTICLE {
+	margin-top: 40px;
+}
+
 BODY {
 	background-color: #fff;
     margin: 0 auto;
@@ -81,7 +86,8 @@ BODY,
 FOOTER,
 HEADER,
 HTML,
-NAV {
+NAV,
+SECTION {
 	position: relative;
 }
 
@@ -89,6 +95,28 @@ BODY {
     font-family: 'Helvetica', 'Verdana', sans-serif;
 	font-size: 16px;
 	outline: none;
+}
+
+CODE {
+	font-family: monospace;
+	font-size: 0.90em;
+	color: #000;
+}
+
+CODE,
+PRE {
+	background-color: #e6e6e6;
+}
+
+PRE {
+	display: block;
+	margin-bottom: 10px;
+	overflow: auto;
+	padding-left: 10px;
+}
+
+EM {
+	font-style: italic;
 }
 
 FOOTER {
@@ -104,10 +132,6 @@ FOOTER {
 FOOTER,
 HEADER {
     clear: both;
-}
-
-FOOTER,
-HEADER {
     overflow: hidden;
 }
 
@@ -116,6 +140,7 @@ FOOTER A {
 }
 
 H1 {
+	border-bottom: solid 1px #e7711b;
     font-size: 1.50em;
 }
 
@@ -127,7 +152,12 @@ H5,
 H6 {
     color: #000;
     font-family: 'Walkway';
-    margin-bottom: 10px;
+    margin-bottom: 4px;
+}
+
+H1 A {
+	color: inherit;
+	text-decoration: none;
 }
 
 H2 {
@@ -179,13 +209,13 @@ P {
     margin-bottom: 10px;
 }
 
+P + H2 {
+	margin-top: 40px;
+}
+
 .columns {
 	margin-top: 20px;
 	overflow: hidden;
-}
-
-.columns H1 {
-	border-bottom: solid 1px #e7711b;
 }
 
 .columns.three SECTION,
@@ -198,17 +228,25 @@ P {
 	BODY {
 		width: 1024px;
 	}
-	
+
 	HEADER {
 		padding: 0 1.953125% 0 1.953125%;
+	}
+	
+	PRE {
+		margin-right: -40%;
 	}
 
 	.columns SECTION {
 		margin: 0 1.953125% 0 1.953125%;
+	}
+
+	.columns SECTION {
 		width: 96.09375%;
 	}
 	
-	.columns.three SECTION {
+	.columns.three SECTION,
+	.columns.two.offset SECTION + SECTION {
 		width: 29.427083333%;
 	}
 
@@ -216,12 +254,16 @@ P {
 		width: 46.09375%;
 	}
 	
+	.columns.two.offset SECTION {
+		width: 62.76041666666667%;
+	}
+
 }
 
 @media ( min-width: 768px ) and ( max-width: 979px ) {
 
 	BODY {
-		width: 100%;
+		width: 768px;
 	}
 	
 	HEADER {
@@ -230,11 +272,12 @@ P {
 
 	.columns SECTION {
 		margin: 0 2.604166666% 0 2.604166666%;
-		width: 94.791666666%;
 	}
 
 	.columns.three SECTION,
-	.columns.two SECTION {
+	.columns.two SECTION,
+	.columns.two.offset SECTION,
+	.columns.two.offset SECTION + SECTION {
 		width: 44.791666666%;
 	}
 
@@ -255,6 +298,10 @@ P {
 		font-size: 2.75em;
 	}
 	
+	H2 {
+		border-bottom: solid 1px #b3b3b3;
+	}
+	
 	HEADER {
 		padding: 0 2.083333333% 0 2.083333333%;
 	}
@@ -268,9 +315,16 @@ P {
 	}
 
 	.columns.three SECTION,
-	.columns.two SECTION {
+	.columns.two SECTION,
+	.columns.two.offset SECTION,
+	.columns.two.offset SECTION + SECTION {
 		float: none;
 		width: 95.833333333%;
+	}
+	
+	.columns.three SECTION + SECTION,
+	.columns.two SECTION + SECTION {
+		margin-top: 40px;
 	}
 
 }
@@ -278,21 +332,33 @@ P {
 @media ( max-width: 320px ) {
 
 	BODY {
+		background-color: #dedede;
 		width: 320px;
+	}
+	
+	H1,
+	H1 SPAN {
+		font-size: 1.10em;
 	}
 	
 	HEADER {
 		padding: 0 10px 0 10px;
 	}
-	
+
 	.columns SECTION {
 		margin: 0 10px 0 10px;
 	}
-
+	
 	.columns.three SECTION,
-	.columns.two SECTION {
+	.columns.two SECTION,
+	.columns.two.offset SECTION,
+	.columns.two.offset SECTION + SECTION {
 		float: none;
 		width: 300px;
+	}
+	
+	.hidden-phone {
+		display: none;
 	}
 
 }
