--- a/include/style/screen.css
+++ b/include/style/screen.css
@@ -1,373 +1,627 @@
-@font-face {
-    font-family: 'Walkway';
-    src: url('/include/font-face/walkway/Walkway_Bold-webfont.eot');
-    src: url('/include/font-face/walkway/Walkway_Bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('/include/font-face/walkway/Walkway_Bold-webfont.woff') format('woff'),
-         url('/include/font-face/walkway/Walkway_Bold-webfont.ttf') format('truetype'),
-         url('/include/font-face/walkway/Walkway_Bold-webfont.svg#PlayRegular') format('svg');
-    font-weight: normal;
-    font-style: normal;
+/*
+Start: The following are stylings for the sample pages.
+ */
+footer {
+	border-top: 2px solid #e8f5e9 !important;
+	color: #81c784;
 }
 
-A,
-ABBR,
-ACRONYM,
-ADDRESS,
-ARTICLE,
-BLOCKQUOTE,
-CAPTION,
-CITE,
-CODE,
-DEL,
-DD,
-DFN,
-DL,
-DT,
-EM,
-FIELDSET,
-FORM,
-H1,
-H2,
-H3,
-H4,
-H5,
-H6,
-IMG,
-LABEL,
-LEGEND,
-LI,
-OL,
-P,
-PRE,
-Q,
-S,
-SAMP,
-SMALL,
-STRIKE,
-STRONG,
-SUB,
-SUP,
-TABLE,
-TBODY,
-TFOOT,
-THEAD,
-TR,
-TH,
-TD,
-TT,
-UL,
-VAR {
-    border: 0;
-    font-family: inherit;
-    font-size: 100%;
-    font-style: normal;
-    font-weight: normal;
-    line-height: 1.5em;
-    margin: 0;
-    padding: 0;
+h1,
+h2 {
+	border-top: 2px solid #e8f5e9 !important;
+	color: #81C784;
 }
 
-A,
-BODY {
-	color: #4d4d4d;
+header {
+	background-color: #c8e6c9 !important;
+	border-bottom: solid 4px #81c784 !important;
 }
 
-ARTICLE + ARTICLE {
-	margin-top: 40px;
+header h1 {
+	border: 0 !important;
+	color: #fff !important;
 }
 
-BODY {
+.icon {
+	fill: #c8e6c9;
+	height: 1.15em;
+	width: 1.15em;
+}
+/*
+End
+ */
+
+
+a,
+abbr,
+acronym,
+address,
+article,
+aside,
+b,
+blockquote,
+body,
+cite,
+code,
+dd,
+div,
+dfn,
+dl,
+dt,
+em,
+fieldset,
+figcaption,
+figure,
+footer,
+form,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+header,
+hgroup,
+html,
+i,
+img,
+label,
+legend,
+li,
+nav,
+ol,
+p,
+pre,
+section,
+span,
+strike,
+strong,
+sub,
+summary,
+sup,
+table,
+tbody,
+td,
+tfoot,
+thead,
+th,
+tr,
+u,
+ul {
+	border: 0;
+	font-size: 100%;
+	font-family: -apple-system, "Helvetica", "Lucida Grande";
+	margin: 0;
+	padding: 0;
+	vertical-align: baseline;
+}
+
+article,
+aside,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+main,
+nav,
+section {
+	display: block;
+}
+
+a {
+	color: #333;
+}
+
+body {
 	background-color: #fff;
-    margin: 0 auto;
-	text-rendering: optimizeLegibility;
+	line-height: 1;
+	margin: 0 auto;
 }
 
-BODY,
-FOOTER,
-HEADER,
-HTML,
-NAV,
-SECTION {
+body,
+dl,
+fieldset,
+footer,
+header,
+html,
+nav,
+section {
 	position: relative;
 }
 
-BODY {
-    font-family: 'Helvetica', 'Verdana', sans-serif;
-	font-size: 16px;
-	outline: none;
+button,
+input[type=button],
+input[type=submit] {
+    background-color: #f5f5f5;
+    border-left: 1px solid #bdbdbd;
+    border-right: 1px solid #bdbdbd;
+    border-top: 1px solid #bdbdbd;
+    border-bottom: 1px solid #9e9e9e;
+    border-radius: 4px;
+		clear: both;
+    color: #424242;
+    cursor: pointer;
+    display: block;
+    font-weight: 600;
+    height: auto;
+    line-height: normal;
+    padding: 8px 14px 8px;
+    width: auto;
 }
 
-CODE {
-	font-family: monospace;
+fieldset {
+	border: 0;
+	margin: 0 0 30px 0;
+	padding: 0;
+}
+
+fieldset label {
+  display: block;
+	padding: 4px 0 4px 0;
+}
+
+fieldset legend {
+	border-top: 2px solid #efefef;
+  color: #333;
+	display: none;
+  font-size: 1.25em;
+  padding: 10px 0 10px 0;
+  width: 100%;
+}
+
+fieldset + fieldset legend {
+  display: block;
+}
+
+fieldset legend span {
+  border: 0;
+  color: #999;
+  float: right;
+  font-size: 0.75em;
+}
+
+fieldset li {
+  margin-bottom: 10px;
+  position: relative;
+}
+
+fieldset li p {
+	color: #999;
 	font-size: 0.90em;
-	color: #000;
+	margin: 4px 0;
+	padding: 0;
 }
 
-CODE,
-PRE {
-	background-color: #e6e6e6;
+fieldset ol,
+fieldset ul {
+  list-style: none;
 }
 
-PRE {
-	display: block;
-	margin-bottom: 10px;
-	overflow: auto;
-	padding-left: 10px;
+footer {
+	border: none;
+	font-size: 0.90em;
+	margin: 3.90625% 0 3.90625% 0;
+	padding-bottom: 3.90625%;
 }
 
-EM {
-	font-style: italic;
+footer,
+footer a {
+	color: #999;
 }
 
-FOOTER {
-	background-color: #f2f2f2;
-	border-top: 2px solid #fbd199;
-	color: #808080;
-    font-size: 0.75em;
-    margin-top: 20px;
-	padding: 10px 0 10px 0;
-	width: 100%;
+footer,
+header,
+main {
+	clear: both;
 }
 
-FOOTER,
-HEADER {
-    clear: both;
-    overflow: hidden;
+footer,
+header,
+main,
+section {
+	overflow: hidden;
 }
 
-FOOTER A {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-size: 1.50em;
+	padding-bottom: 1.953125%;
+}
+
+h1 span,
+h2 span {
+	float: right;
+	font-size: 0.85rem;
+}
+
+h1,
+h2 {
+	border-top: 2px solid #e0e0e0;
+	padding-top: 0.9765625%;
+}
+
+header {
+	background-color: #efefef;
+	position: relative;
+}
+
+header h1,
+header h2 {
+	border: 0;
+	padding-bottom: 0;
+}
+
+header nav {
+	position: absolute;
+	top: 4px;
+}
+
+header nav a {
 	text-decoration: none;
 }
 
-H1 {
-	border-bottom: solid 1px #e7711b;
-    font-size: 1.50em;
+header nav ul {
+  list-style: none;
 }
 
-H1,
-H2,
-H3,
-H4,
-H5,
-H6 {
-    color: #000;
-    font-family: 'Walkway';
-    margin-bottom: 4px;
-}
-
-H1 A {
-	color: inherit;
-	text-decoration: none;
-}
-
-H2 {
-    font-size: 1.35em;
-}
-
-H3,
-H4,
-H5,
-H6 {
-	font-size: 1.10em;
-    font-weight: bold;
-}
-
-HEADER {
-	background-color: #e7711b;
-	border-bottom: solid 2px #fbd199;
-	margin-bottom: 20px;
-	padding: 4px 20px 4px 20px;
-}
-
-HEADER H1 {
-	color: #fff;	
-	font-family: 'Walkway';
-	font-size: 1.75em;
-	letter-spacing: 1px;
+header nav ul li {
+	float: left;
 	margin: 0;
 	padding: 0;
 }
 
-HEADER H1 SPAN {
-	opacity: 0.75;
+header nav ul li + li {
+	margin-left: 20px;
 }
 
-HTML {
-	background-color: #825d42;
+img,
+svg {
+	vertical-align: middle;
 }
 
-IMG {
-    vertical-align: bottom;
+input[disabled],
+select[disabled],
+textarea[disabled],
+input[readonly],
+select[readonly],
+textarea[readonly] {
+	background-color: #f5f5f5;
+	cursor: not-allowed;
+	border: 1px solid #ddd;
+	font-weight: normal;
+	line-height: normal;
+	margin: 0;
+  padding: 4px;
+  width: 400px;
 }
 
-OL,
-UL {
-    margin: 0 0 18px 25px;
+input[type=file],
+input[type=password],
+input[type=text],
+textarea {
+	border: 1px solid #9e9e9e;
 }
 
-P {
-    margin-bottom: 10px;
+input[type=file],
+input[type=password],
+input[type=text],
+select,
+textarea {
+	background-color: #ffffff;
+	box-sizing: border-box;
+	font-size: 1.05em;
+	height: 2.00rem;
+	margin: 0;
+	outline: none;
+  padding: 4px;
+  width: 400px;
+
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
 }
 
-P + H2 {
-	margin-top: 40px;
+input[type=email]:focus,
+input[type=file]:focus,
+input[type=password]:focus,
+input[type=text]:focus,
+select:focus,
+textarea:focus {
+	border: 1px solid #757575;
 }
 
-.columns {
-	margin-top: 20px;
-	overflow: hidden;
+input[type=text] {
+    -webkit-appearance: none;
 }
 
-.columns.three SECTION,
-.columns.two SECTION {
+ol,
+ul {
+	list-style: none;
+}
+
+p {
+	padding-bottom: 2.9296875%;
+	line-height: 1.5rem;
+}
+
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+	width: 100%;
+}
+
+table tbody tr:hover td {
+	background-color: #fffde7;
+}
+
+table td {
+	vertical-align: top;
+}
+
+table td,
+table th {
+	border-bottom: 1px solid #e6e6e6;
+	padding: 4px;
+	position: relative;
+}
+
+table tfoot td {
+    border-top: solid 2px #ccc;
+    color: #333;
+    font-weight: bold;
+}
+
+table th {
+	background-color: #f9f9f9;
+	border-bottom-width: 2px;
+	border-top: 3px solid #e6e6e6;
+	color: #333;
+	font-size: 0.90em;
+	font-weight: normal;
+	vertical-align: bottom;
+}
+
+textarea {
+	height: 100px;
+  resize: vertical;
+}
+
+.columns.three section,
+.columns.two section {
 	float: left;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(158, 158, 158, 0.2);
+  border-radius: 0px;
+
+  -webkit-border-radius: 0px;
+}
+::-webkit-scrollbar-thumb:hover {
+	background: rgba(158, 158, 158, 0.5);
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 0px;
+
+  -webkit-border-radius: 0px;
+  -webkit-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.2);
 }
 
 @media ( min-width: 1024px ) {
 
-	BODY {
+	body {
 		width: 1024px;
 	}
 
-	HEADER {
-		padding: 0 1.953125% 0 1.953125%;
-	}
-	
-	PRE {
-		margin-right: -40%;
+	fieldset {
+	    padding-bottom: 0.9765625%;
 	}
 
-	.columns SECTION {
-		margin: 0 1.953125% 0 1.953125%;
+	footer,
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6,
+	p {
+		margin-bottom: 0.9765625%;
 	}
 
-	.columns SECTION {
-		width: 96.09375%;
-	}
-	
-	.columns.three SECTION,
-	.columns.two.offset SECTION + SECTION {
-		width: 29.427083333%;
+	h1 span,
+	h2 span {
+		margin-left: 0.9765625%;
 	}
 
-	.columns.two SECTION {
-		width: 46.09375%;
+	header {
+		padding: 0 0.9765625% 0 0.9765625%;
 	}
-	
-	.columns.two.offset SECTION {
-		width: 62.76041666666667%;
+
+	header,
+	section {
+		width: 98.046875%
+	}
+
+	header nav {
+		right: 0.9765625%;
+		top: 8px;
+	}
+
+  /* TODO: Convert to % */
+	header nav ul li + li {
+		margin-left: 20px;
+	}
+
+	input.large,
+	textarea.large,
+	fieldset ul.large {
+		width: 58.59375%; /*600px;*/
+	}
+
+	input.medium,
+	textarea.medium {
+		width: 29.296875%; /* 300px */
+	}
+
+	input.small,
+	textarea.small {
+		width: 14.6484375%; /* 150px */
+	}
+
+	section {
+		margin: 3.90625% 0.9765625% 0 0.9765625%;
+	}
+
+	select {
+		width: 410px;
+	}
+
+	select.large {
+		width: 610px;
+	}
+
+	select.medium {
+		width: 210px;
+	}
+
+	select.small {
+		width: 110px;
+	}
+
+	.columns.three section {
+		margin: 1.953125% 0.9765625% 0 0.9765625%;
+	}
+
+	.columns.three section,
+	.columns.two.offset section + section {
+		width: 31.38020833333333%;
+	}
+
+	.columns.three section:nth-child(3n+1),
+	.columns.two section:nth-child(odd) {
+		clear: left;
+	}
+
+	.columns.two section {
+		width: 48.046875%;
+	}
+
+	.columns.two.offset section {
+		width: 64.71354166666667%;
+	}
+
+	.split fieldset {
+		float: left;
+		overflow: hidden;
+		width: 49.0234375%;
+	}
+
+	.split fieldset:last-of-type,
+	.split fieldset:nth-child(odd) {
+		min-height: auto !important;
+	}
+
+	.split fieldset:nth-child(even) {
+		min-height: 180px;
+	}
+
+	.split fieldset legend {
+		display: block;
+	}
+
+	.split fieldset:nth-child(even) {
+	  margin-left: 0.9765625%;
+	}
+
+	.split fieldset:nth-child(odd) {
+	  margin-right: 0.9765625%;
+	}
+
+	.table-search input[type='text'] {
+	    width: 29.296875%; /*300px;*/
 	}
 
 }
 
-@media ( min-width: 768px ) and ( max-width: 979px ) {
+@media ( min-width: 768px ) and ( max-width: 1023px ) {
 
-	BODY {
-		width: 768px;
-	}
-	
-	HEADER {
-		padding: 0 2.604166666% 0 2.604166666%; 
-	}
-
-	.columns SECTION {
-		margin: 0 2.604166666% 0 2.604166666%;
-	}
-
-	.columns.three SECTION,
-	.columns.two SECTION,
-	.columns.two.offset SECTION,
-	.columns.two.offset SECTION + SECTION {
-		width: 44.791666666%;
-	}
-
-}
-
-@media (min-width: 321px ) and ( max-width: 767px ) {
-
-	BODY {
-		font-size: 0.60em;
+	body {
 		width: 100%;
 	}
-	
-	FOOTER {
-		font-size: 0.95em;
-	}
-	
-	H1 {
-		font-size: 2.75em;
-	}
-	
-	H2 {
-		border-bottom: solid 1px #b3b3b3;
-		font-size: 2.25em;
-	}
-	
-	HEADER {
-		padding: 0 2.083333333% 0 2.083333333%;
-	}
-	
-	HEADER H1 {
-		font-size: 2.00em;
+
+	div section,
+	main section {
+		margin: 0 1.302083333333333% 0 1.302083333333333%;
 	}
 
-	.columns SECTION {
-		margin: 0 2.083333333% 0 2.083333333%;
+	header {
+		padding: 0 1.302083333333333% 0 1.302083333333333%;
 	}
 
-	.columns.three SECTION,
-	.columns.two SECTION,
-	.columns.two.offset SECTION,
-	.columns.two.offset SECTION + SECTION {
-		float: none;
-		width: 95.833333333%;
+	header nav {
+		right: 1.302083333333333%;
 	}
-	
-	.columns.three SECTION + SECTION,
-	.columns.two SECTION + SECTION {
-		margin-top: 40px;
+
+	.columns.three section {
+		margin: 2.604166666666667% 1.302083333333333% 0 1.302083333333333%;
+	}
+
+	.columns.three section,
+	.columns.two.offset section + section {
+		width: 30.72916666666667%;
+	}
+
+	.columns.three section:nth-child(3n+1),
+	.columns.two section:nth-child(odd) {
+		clear: left;
+	}
+
+	.columns.two section {
+		margin: 0 1.302083333333333% 0 1.302083333333333%;
+		width: 47.39583333333333%;
+	}
+
+	.columns.two.offset section {
+		width: 64.0625%;
 	}
 
 }
 
-@media ( max-width: 320px ) {
+@media ( min-width: 320px ) and ( max-width: 767px ) { /* 736 target */
 
-	BODY {
-		width: 320px;
-	}
-	
-	H1,
-	H1 SPAN {
-		font-size: 1.10em;
-	}
-	
-	H2 {
-		font-size: 1.00em;
-	}
-	
-	HEADER {
-		padding: 0 10px 0 10px;
+	body {
+		width: 100%;
 	}
 
-	.columns SECTION {
-		margin: 0 10px 0 10px;
-	}
-	
-	.columns.three SECTION,
-	.columns.two SECTION,
-	.columns.two.offset SECTION,
-	.columns.two.offset SECTION + SECTION {
+	div section,
+	main section,
+	.columns.three section,
+	.columns.two section,
+	.columns.two.offset section {
 		float: none;
-		width: 300px;
+		margin: 0 1.358695652173913% 0 1.358695652173913%;
+		width: 97.28260869565217%;
 	}
-	
-	.columns.three SECTION + SECTION,
-	.columns.two SECTION + SECTION {
-		margin-top: 40px;
+
+	header {
+		padding: 0 1.358695652173913% 0 1.358695652173913%;
 	}
-	
-	.hidden-phone {
-		display: none;
+
+	header nav {
+		right: 1.358695652173913%;
+	}
+
+	.columns.three section {
+		margin-top: 5.434782608695652%;
 	}
 
 }
