--- a/web/include/style/screen.css
+++ b/web/include/style/screen.css
@@ -1,11 +1,10 @@
 /*
-Start: The following are stylings for the sample pages.
- */
 footer {
 	border-top: 2px solid #e8f5e9 !important;
 	color: #81c784;
+	width: 100% !important;
 }
-
+*/
 h1,
 h2 {
 	border-top: 2px solid #e8f5e9 !important;
@@ -13,13 +12,13 @@ h2 {
 }
 
 header {
-	background-color: #c8e6c9 !important;
+	/*background-color: #c8e6c9 !important;*/
 	border-bottom: solid 4px #81c784 !important;
 }
 
 header h1 {
 	border: 0 !important;
-	color: #fff !important;
+	color: #000 !important;
 }
 
 .icon {
@@ -27,10 +26,6 @@ header h1 {
 	height: 1.15em;
 	width: 1.15em;
 }
-/*
-End
- */
-
 
 a,
 abbr,
