--- a/source/web/Views/Home/Index.cshtml
+++ b/source/web/Views/Home/Index.cshtml
@@ -1,8 +1,24 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Welcome";
 }
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="columns centered">
+    <article>
+        <section>
+            <h1>Matt Choinski</h1>
+            <p>Results-oriented and seasoned Full Stack Developer with over 20 years of experience specializing in
+                Microsoft .NET, MongoDB, Azure, and Azure OpenAI technologies. Proven track record of delivering
+                high-quality solutions and leading complex development projects. Currently responsible for managing and
+                developing a mission-critical web application for the US Army, utilized daily by a significant number of
+                personnel across several different US Army organizations.</p>
+            <p>Certifications:
+            <ul>
+                <li>Microsoft Azure AI Engineer Associate (ID: 213BB4E398B6B0F3)</li>
+                <li>Microsoft Azure AI Fundamentals (ID: 891563BD65577FA4)</li>
+                <li>Microsoft Azure Data Fundamentals (ID: E2FD4596864291C9)</li>
+                <li>Microsoft Azure Fundmentals (ID: A612B6D6390179D3)</li>
+                <li>MongoDB C# Developer Associate (ID: MDB73ticq3d88)</li>
+            </ul>
+            </p>
+        </section>
+    </article>
 </div>
